# great-text

./: README.md  example.py  pyproject.toml
great_text/: README.md  great.py
tests/: test_great_text.py
